syntax = "proto3";
package Raven;

option csharp_namespace = "GrpcRaven";

service Consumer {
    rpc Consume(RavenMessageProto) returns (RavenResponse) {}
}

message RavenMessageProto {
    string topic = 1;
    int32 partition = 2;
    uint64 offset = 3;
    string key = 4;
    bytes payload = 5;
}

message RavenResponse {
    int32 code = 1;
    string detail = 2;
}
